--- a/plugin.yml
+++ b/plugin.yml
@@ -7,7 +7,7 @@ database: false
 commands:
     relux:
         description: Relights chunks around the player
-        usage: /relux <radius>
+        usage: /relux [radius]
 
 permissions:
     relux.use:
