--- a/res/plugin.yml
+++ b/res/plugin.yml
@@ -1,5 +1,5 @@
 name: Relux
-version: 0.5-dev
+version: 0.5-release
 description: Allows manual chunk relighting
 author: WhiteWolfdoge (Emily White)
 main: net.whiteWolfdoge.relux.ReluxPlugin
